--- a/readable/package.json
+++ b/readable/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "array-sort": "^1.0.0",
+    "bootstrap": "^4.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
