--- a/readable/package.json
+++ b/readable/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.1",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
